codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_server_auth_required.snap
---
source: tui/src/status/tests.rs
expression: rendered
---
/status

╭───────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                 │
│                                                           │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的  │
│ 速率限制和点数信息                                        │
│                                                           │
│  模型:         gpt-5.6-sol (推理强度 none, 推理摘要 auto) │
│  模型提供商:   server-openai                              │
│  目录:         /workspace/tests                           │
│  权限:         自定义（工作区，可访问网络，请求审批）     │
│  Agents.md:    <none>                                     │
│                                                           │
│  Token 用量:   0 总计  (0 输入 + 0 输出)                  │
│  限制:         数据尚不可用                               │
╰───────────────────────────────────────────────────────────╯
