codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                      │
│                                                                │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的       │
│ 速率限制和点数信息                                             │
│                                                                │
│  模型:          gpt-5.1-codex (推理强度 none, 推理摘要 auto)   │
│  目录:          /workspace/tests                               │
│  权限:          自定义（工作区，可访问网络，请求审批）         │
│  Agents.md:     <none>                                         │
│                                                                │
│  Token 用量:    2K 总计  (1.4K 输入 + 600 输出)                │
│  上下文窗口:    剩余 100% (2.2K 已使用 / 272K)                 │
│  5h 限制:       [███████████░░░░░░░░░] 剩余 55% （09:25 重置） │
│  Weekly 限制:   [██████████████░░░░░░] 剩余 70% （09:55 重置） │
│  点数:          可用                                           │
╰────────────────────────────────────────────────────────────────╯
