codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_forked_from.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                       │
│                                                                 │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的        │
│ 速率限制和点数信息                                              │
│                                                                 │
│  模型:         gpt-5.1-codex-max (推理强度 none, 推理摘要 auto) │
│  目录:         /workspace/tests                                 │
│  权限:         自定义（工作区，可访问网络，请求审批）           │
│  Agents.md:    <none>                                           │
│  会话:         0f0f3c13-6cf9-4aa4-8b80-7d49c2f1be2e             │
│  派生自:       e9f18a88-8081-4e51-9d4e-8af5cde2d8dd             │
│                                                                 │
│  Token 用量:   1.2K 总计  (800 输入 + 400 输出)                 │
│  上下文窗口:   剩余 100% (1.2K 已使用 / 272K)                   │
│  限制:         数据尚不可用                                     │
╰─────────────────────────────────────────────────────────────────╯
