codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                            │
│                                                                      │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的             │
│ 速率限制和点数信息                                                   │
│                                                                      │
│  模型:          gpt-5.1-codex-max (推理强度 high, 推理摘要 detailed) │
│  目录:          /workspace/tests                                     │
│  权限:          工作区（请求审批）                                   │
│  Agents.md:     <none>                                               │
│                                                                      │
│  Token 用量:    1.9K 总计  (1K 输入 + 900 输出)                      │
│  上下文窗口:    剩余 100% (2.25K 已使用 / 272K)                      │
│  5h 限制:       [██████░░░░░░░░░░░░░░] 剩余 28% （03:14 重置）       │
│  Weekly 限制:   [███████████░░░░░░░░░] 剩余 55% （03:24 重置）       │
╰──────────────────────────────────────────────────────────────────────╯
