codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_auto_review_permissions.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                       │
│                                                                 │
│ 访问 https://chatgpt.com/codex/settings/usage 查看最新的        │
│ 速率限制和点数信息                                              │
│                                                                 │
│  模型:         gpt-5.1-codex-max (推理强度 none, 推理摘要 auto) │
│  目录:         /workspace/tests                                 │
│  权限:         工作区（代我审批）                               │
│  Agents.md:    <none>                                           │
│                                                                 │
│  Token 用量:   0 总计  (0 输入 + 0 输出)                        │
│  上下文窗口:   剩余 100% (0 已使用 / 272K)                      │
│  限制:         数据尚不可用                                     │
╰─────────────────────────────────────────────────────────────────╯
